# sha512-halo2

./: .gitignore  Cargo.toml  README.md
benches/: sha512.rs
src/: lib.rs  sha512.rs
src/sha512/: table16.rs  table32.rs  table64.rs
src/sha512/table16/: compression.rs  gates.rs  message_schedule.rs  spread_table.rs  util.rs
src/sha512/table16/compression/: compression_gates.rs  compression_util.rs  subregion_digest.rs  subregion_initial.rs  subregion_main.rs
src/sha512/table16/message_schedule/: schedule_gates.rs  schedule_util.rs  subregion1.rs  subregion2.rs  subregion3.rs
src/sha512/table32/: compression.rs  gates.rs  message_schedule.rs  spread_table.rs  util.rs
src/sha512/table32/compression/: compression_gates.rs  compression_util.rs  subregion_main.rs
src/sha512/table32/message_schedule/: schedule_gates.rs  schedule_util.rs  subregion1.rs  subregion2.rs  subregion3.rs
src/sha512/table64/: compression.rs  message_schedule.rs  spread_table.rs  util.rs
src/sha512/table64/compression/: compression_gates.rs  compression_util.rs  subregion_digest.rs  subregion_initial.rs  subregion_main.rs
src/sha512/table64/message_schedule/: schedule_gates.rs  subregion1.rs  subregion2.rs  subregion3.rs
tests/: digest.rs
