[package]
name = "sha512-halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_02_02" }
rand = "0.8.4"
arrayvec = "0.7.0"
bitvec = "1"
ff = "0.13"
group = "0.13"
lazy_static = "1"
pasta_curves = "0.5"
proptest = { version = "1.0.0", optional = true }
subtle = "2.3"
uint = "0.9.2" # MSRV 1.56.1
plotters = { version = "0.3.0", default-features = false, optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
hex-literal = "0.2.2"
sha2 = "0.10.6"
criterion = "0.3"
rand_chacha = "0.3"
rand_xorshift = "0.3"
ark-std = { version = "0.3", features = ["print-trace"] }
round = "0.1.2"
crypto = "0.5.1"

[features]
dev-graph = ["plotters", "tabbycat"]
test-dev-graph = [
    "dev-graph",
    "plotters/bitmap_backend",
]



